# Kids-Controller

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  admin_routes.py  admin_ui.py  api_routes.py  dependencies.py  main.py
config/: __init__.py  logging.py  settings.py  time.py
core/: __init__.py  admin_service.py  algorithm.py  draw_service.py  models.py  supervisor_service.py  supervisor_state.py  validation.py
deploy/systemd/: kids-controller.service
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  TEST_REPORT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  mode.js  styles.css
frontend/tests/: mode.test.js
integrations/: __init__.py  homeassistant_adapter.py  homeassistant_models.py  router_client.py  router_models.py  supervisor_models.py
persistence/: __init__.py  mappers.py  postgres_client.py  repositories.py
scripts/: check_drift.sh  deploy.sh  verify_live.sh
sql/: 00_reset_and_create_database.sql  01_schema_types_and_tables.sql  02_seed_system_config.sql  03_add_replay_context_hash.sql  verification_queries.sql
tests/: __init__.py  test_admin_routes.py  test_api_model_consistency.py  test_draw_service.py  test_field_consistency.py  test_mode_switch.py  test_present_mask.py  test_repository_interfaces.py  test_router_supervisor.py
